# clickpipe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: detection.md
examples/: README.md
scripts/: smoke.sh
src/: ansi.rs  cli.rs  giturl.rs  issues.rs  lib.rs  main.rs  osc8.rs  paths.rs  scan.rs  uri.rs  urls.rs
tests/: cli.rs
